# bffnt-font-editor

./: .gitignore  LICENSE  README.md  __init__.py  bffnt_writer.py  build.bat  export_import.py  main.py  pyproject.toml  requirements.txt  run.bat  run_editor.py  texture_decoder.py  texture_encoder.py
.github/workflows/: build.yml
bffnt_editor/: __init__.py  __main__.py
bffnt_editor/core/: __init__.py  exporter.py  parser.py  writer.py
bffnt_editor/gui/: __init__.py  font_viewer.py  main_window.py  mapping_editor.py
bffnt_editor/i18n/: translations.py
bffnt_editor/texture/: __init__.py  decoder.py  encoder.py
gui/: __init__.py  font_viewer.py  main_window.py  mapping_editor.py
i18n/: __init__.py  translations.py
scripts/: build.bat  run.bat
