[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bffnt-font-editor"
version = "1.0.0"
description = "A modern tool for viewing and editing Nintendo Switch BFFNT font files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["nintendo", "switch", "bffnt", "font", "editor", "modding"]
authors = [
    {name = "BFFNT Font Editor Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics :: Editors",
]
dependencies = [
    "PyQt6>=6.5.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.urls]
"Homepage" = "https://github.com/Digote/bffnt-font-editor"
"Bug Tracker" = "https://github.com/Digote/bffnt-font-editor/issues"

[project.scripts]
bffnt-editor = "bffnt_editor.__main__:main"

[project.gui-scripts]
bffnt-font-editor = "bffnt_editor.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bffnt_editor*"]
